--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,4 @@
-include "persistence.conf"
-include "securesocial.conf"
-include "logger.conf"
+include "domain.conf"
 
 # Configuration
 application.name=courtly
@@ -16,3 +14,4 @@ dbplugin = disabled
 jpaplugin = disabled
 evolutionplugin = disabled
 
+sslEnabled=false
