Classic mongodb based implementation for the url shortener

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,4 @@
 include "persistence.conf"
-include "securesocial.conf"
-include "logger.conf"
 
 # Configuration
 application.name=courtly
@@ -16,3 +14,9 @@ dbplugin = disabled
 jpaplugin = disabled
 evolutionplugin = disabled
 
+token{
+    generator{
+        minLength=4
+        maxLength=8
+    }
+}
